# customer-support-ai-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
round_1/: Dockerfile  README.md  __init__.py  inference.py
round_1/server/: app.py  environment.py
server/: app.py
